# END-END-ETL-PIPELINES

./: .gitignore  ACT VS PLN LABOR COST.PKL  ACT VS PLN LABOR COST.py  ACT VS PLN LBR CST by orders avg.py  ACT VS PLN LBR CST.py  AVG. PRCS TIME BY OPS.PY  BOM TO HDF.py  BOM TO PICKLE.py  BOM.PKL  BOM_EXPLODE.py  CPL.PKL  CY PARTS ONLY COSTS.py  CY PN COSTS.py  CY QT BY TABS temp.py  CY QT BY TABS.py  CY QUOTES.py  CY REQUOTE 1.25 update.py  CY REQUOTE.py  CY-HPARTS.PKL  CY_FAB_ACT.PKL  CY_LVLTEMP.PKL  CY_LVLTEMP1.25.PKL  DASHBOARD.py  DEPLOY_TO_WEB.py  FISCAL CAL.PKL  FRAME QUOTES.PKL  FRAME.COSTS.PKL  FRAMES.PKL  FRAMES_PIE.PKL  FRAMES_QT_VS_ACT.PKL  FRAMES_TESTQUOTES.PKL  HD_TKT_scrapper.py  KLA QUOTES.py  LABOR HOUR SCRUB.py  LAM QTVSACT & SMRY PKL.py  LAM QUOTES.py  LAM.COSTS.PKL  LAMPART COSTS.py  LAMPIE.PKL  LBR HR WO TRENDS.py  (+47 more)
ARCHIVE/: BOMEXTRACT.py  COMPRE BOM EXTRACT & TOP LEVEL.py  FILTER PH.py  LAM QUOTE VS ACT SUMMARY.py  LAM QUOTES.py  LAM REGEX.py  LAM SUPPLIER COST MODEL.py  PNS FOR AGILE.py  READ PICKLE.py  TOPLEVELQTY.py  pytest.xlsx
BI_PULL/: ALL_BI_PULL.py  BI_PULLS_MASS_TO_DB.py  BI_TO_DB.py  LBR_BI_PULL.py  LOCAL_PG_DB_LOAD.py  OVS_BI_PULL.py  PH_BI_PULL.py  PYANYWHERE_MYSQL_UPLOAD.py  QN_BI_PULL.py  SHP_BI_PULL.py  STD_BI_PULL.py  packages_list.txt  pyproject.toml
CYMER_PY/: CY QT BY TABS.py
DATA ETLS/: ACT VS PLN LBR CST.py  LBR HR WO TRENDS.py  LBR QLY COSTS.py  OVS CALC.py  PH CALC.py  PNL CALC.py  PROCESS DAYS.PY  PYSPARKTEST.py  QN_ETL.py  SM_DEMAND 3 MONTHS.py  WC LOAD HRS.py  package_lister.py  packages_list.txt  pyproject.toml
DOCKER FILES/: Dockerfile
DOCKER_FILES/: Dockerfile
MALAYSIA COMP/: 853-198660-012.xlsx  853-224170-107.xlsx  853-224539-012.xlsx  853-229142-014.xlsx  853-235342-011.xlsx  853-235480-025.xlsx  853-278051-024.xlsx  853-278051-128.xlsx  853-289353-007.xlsx  853-334065-009.xlsx  MALAYSIA ACTUALS.pkl  MALAYSIA COSTS AND FILL.py  MALAYSIA LAM QUOTES.py  MALAYSIA QUOTE PNS.PKL
PRODUCTION CODE/: app.py  index.py  package_lister.py  packages_list.txt  pyproject.toml
PRODUCTION CODE/app_files/: DAYS.py  FAB.py  FPY.py  FPY_PN.py  PARTSEARCH.py  PNL.py  QLY_RELATIVE_TRENDS.py  QLY_TRENDS.py  SHEETMETAL_DEMAND.py  TOOLCOSTS.py  Version.py  WC_LOAD.py  WO_HRS.py  __init__.py  app.py  sql_connector.py  tree_to_df.py
PY_REPO/: ACT VS PLN LBR CST.py  ADD BOMS TO CY QUOTES.PY  ALL_CUST_QTVSACT.PY  BOM TO HDF.py  BOM_EXPLODE.py  DASHBOARD.py  FRAMES QTVSACT & SMRY.py  KLA QUOTES.py  LBR HR WO TRENDS.py  LM QUOTES.py  NP_VECT_TEST2.py  OVS CALC.py  READ PICKLES.py  ROUTING_DATA.py  SAP_OOR_PULL.py  copier.py  def_cost_extractor.py  excel_to_sql_db.py  index.py  loadtopostgresqldb.py  loadtosqldb.py  mcmaster_scrapper_main.py  mercury parts.py  np vectorization test.py  ppt_image_text.py  remove_outliers.py  trees_to_df.py  true_cost_finder.py
apps/: DAYS.py  FAB.py  PARTSEARCH.py  PNL BUP.py  PNL.py  QLY_RELATIVE_TRENDS.py  QLY_TRENDS.py  SHEETMETAL_DEMAND.py  TOOLCOSTS.py  WC_LOAD.py  WO_HRS.py
dbt_project/: dbt_project.yml  pyproject.toml
dbt_project/models/: labor_hrs.sql
dbt_project/profiles/: profiles.yml
