[tool.poetry]
name = "python_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
absl-py = "^2.0.0"
aiohttp = "^3.8.5"
aiosignal = "^1.3.1"
alembic = "^1.12.0"
anyio = "^4.0.0"
anytree = "^2.9.0"
apache-airflow = "^2.7.1"
apache-airflow-providers-common-sql = "^1.7.2"
apache-airflow-providers-ftp = "^3.5.2"
apache-airflow-providers-http = "^4.5.2"
apache-airflow-providers-imap = "^3.3.2"
apache-airflow-providers-sqlite = "^3.4.3"
apispec = "^6.3.0"
appdirs = "^1.4.4"
argcomplete = "^3.1.2"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
arrow = "^1.2.3"
asgiref = "^3.7.2"
asttokens = "^2.4.0"
astunparse = "^1.6.3"
async-generator = "^1.10"
async-timeout = "^4.0.3"
attrs = "^23.1.0"
automat = "^22.10.0"
autopep8 = "^2.0.4"
babel = "^2.12.1"
backcall = "^0.2.0"
bcrypt = "^4.0.1"
beautifulsoup4 = "^4.12.2"
bigtree = "^0.12.3"
binarytree = "^6.5.1"
bleach = "^6.0.0"
blinker = "^1.6.2"
blosc2 = "^2.2.7"
branca = "^0.6.0"
bs4 = "^0.0.1"
cachelib = "^0.10.2"
cachetools = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
