[tool.poetry]
name = "python_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
absl-py = "^2.0.0"
aiohttp = "^3.8.5"
aiosignal = "^1.3.1"
alembic = "^1.12.0"
anyio = "^4.0.0"
anytree = "^2.9.0"
apache-airflow = "^2.7.1"
apache-airflow-providers-common-sql = "^1.7.2"
apache-airflow-providers-ftp = "^3.5.2"
apache-airflow-providers-http = "^4.5.2"
apache-airflow-providers-imap = "^3.3.2"
apache-airflow-providers-sqlite = "^3.4.3"
apispec = "^6.3.0"
appdirs = "^1.4.4"
argcomplete = "^3.1.2"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
arrow = "^1.2.3"
asgiref = "^3.7.2"
asttokens = "^2.4.0"
astunparse = "^1.6.3"
async-generator = "^1.10"
async-timeout = "^4.0.3"
attrs = "^23.1.0"
automat = "^22.10.0"
autopep8 = "^2.0.4"
babel = "^2.12.1"
backcall = "^0.2.0"
bcrypt = "^4.0.1"
beautifulsoup4 = "^4.12.2"
bigtree = "^0.12.3"
binarytree = "^6.5.1"
bleach = "^6.0.0"
blinker = "^1.6.2"
blosc2 = "^2.2.7"
branca = "^0.6.0"
bs4 = "^0.0.1"
cachelib = "^0.10.2"
cachetools = "^5.3.1"
cattrs = "^23.1.2"
certifi = "^2023.7.22"
cffi = "^1.15.1"
charset-normalizer = "^3.2.0"
click = "^8.1.7"
clickclick = "^20.10.2"
cloudpickle = "^2.2.1"
colorama = "^0.4.6"
comm = "^0.1.4"
configupdater = "^3.1.1"
connexion = "^2.14.2"
constantly = "^15.1.0"
cron-descriptor = "^1.4.0"
croniter = "^1.4.1"
cryptography = "^41.0.4"
cssselect = "^1.2.0"
cycler = "^0.11.0"
cython = "^3.0.2"
dash = "^2.13.0"
dash-bootstrap-components = "^1.5.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-table = "^5.0.0"
dask = "^2023.9.2"
datetime-quarter = "^1.0.3"
debugpy = "^1.8.0"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
deprecated = "^1.2.14"
dill = "^0.3.7"
distro = "^1.8.0"
dnspython = "^2.4.2"
docker = "^6.1.3"
docutils = "^0.20.1"
easyprocess = "^1.1"
entrypoint2 = "^1.1"
et-xmlfile = "^1.1.0"
exceptiongroup = "^1.1.3"
executing = "^1.2.0"
fake-useragent = "^1.2.1"
fanstatic = "^1.4"
fastjsonschema = "^2.18.0"
filelock = "^3.12.4"
flask-appbuilder = "^4.3.6"
flask-jwt-extended = "^4.5.2"
flask-limiter = "^3.5.0"
flask-login = "^0.6.2"
flask-session = "^0.5.0"
flask-wtf = "^1.1.1"
flatbuffers = "^23.5.26"
folium = "^0.14.0"
fonttools = "^4.42.1"
fqdn = "^1.5.1"
frozenlist = "^1.4.0"
fsspec = "^2023.9.1"
gast = "^0.5.4"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-pasta = "^0.2.0"
gprof2dot = "^2022.7.29"
graphviz = "^0.20.1"
greenlet = "^2.0.2"
grpcio = "^1.58.0"
gunicorn = "^21.2.0"
h11 = "^0.14.0"
h5py = "^3.9.0"
httpcore = "^0.18.0"
httpx = "^0.25.0"
hyperlink = "^21.0.0"
ibm-db = "^3.2.0"
ibm-db-sa = "^0.4.0"
idna = "^3.4"
imageio = "^2.31.3"
importlib-metadata = "^6.8.0"
importlib-resources = "^6.0.1"
incremental = "^22.10.0"
inflection = "^0.5.1"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
ipython-genutils = "^0.2.0"
ipywidgets = "^8.1.1"
isoduration = "^20.11.0"
itemadapter = "^0.8.0"
itemloaders = "^1.1.0"
itsdangerous = "^2.1.2"
jax = "^0.4.16"
jedi = "^0.19.0"
jinja2 = "^3.1.2"
jmespath = "^1.0.1"
joblib = "^1.3.2"
js = "^1.0"
jsonpickle = "^3.0.2"
jsonpointer = "^2.4"
jsonschema = "^4.19.0"
jupyter = "^1.0.0"
jupyter-console = "^6.6.3"
jupyter-events = "^0.7.0"
jupyter-client = "^8.3.1"
jupyter-core = "^5.3.1"
jupyter-server = "^2.7.3"
jupyter-server-terminals = "^0.4.4"
jupyterlab-pygments = "^0.2.2"
jupyterlab-widgets = "^3.0.9"
keras = "^2.14.0"
kiwisolver = "^1.4.5"
lazy-object-proxy = "^1.9.0"
libclang = "^16.0.6"
limits = "^3.6.0"
linkify-it-py = "^2.0.2"
locket = "^1.0.0"
lockfile = "^0.12.2"
lxml = "^4.9.3"
mako = "^1.2.4"
markdown = "^3.4.4"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.3"
marshmallow = "^3.20.1"
marshmallow-enum = "^1.5.1"
marshmallow-oneofschema = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
