[tool.poetry]
name = "python_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
absl-py = "^2.0.0"
aiohttp = "^3.8.5"
aiosignal = "^1.3.1"
alembic = "^1.12.0"
anyio = "^4.0.0"
anytree = "^2.9.0"
apache-airflow = "^2.7.1"
apache-airflow-providers-common-sql = "^1.7.2"
apache-airflow-providers-ftp = "^3.5.2"
apache-airflow-providers-http = "^4.5.2"
apache-airflow-providers-imap = "^3.3.2"
apache-airflow-providers-sqlite = "^3.4.3"
apispec = "^6.3.0"
appdirs = "^1.4.4"
argcomplete = "^3.1.2"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
arrow = "^1.2.3"
asgiref = "^3.7.2"
asttokens = "^2.4.0"
astunparse = "^1.6.3"
async-generator = "^1.10"
async-timeout = "^4.0.3"
attrs = "^23.1.0"
automat = "^22.10.0"
autopep8 = "^2.0.4"
babel = "^2.12.1"
backcall = "^0.2.0"
bcrypt = "^4.0.1"
beautifulsoup4 = "^4.12.2"
bigtree = "^0.12.3"
binarytree = "^6.5.1"
bleach = "^6.0.0"
blinker = "^1.6.2"
blosc2 = "^2.2.7"
branca = "^0.6.0"
bs4 = "^0.0.1"
cachelib = "^0.10.2"
cachetools = "^5.3.1"
cattrs = "^23.1.2"
certifi = "^2023.7.22"
cffi = "^1.15.1"
charset-normalizer = "^3.2.0"
click = "^8.1.7"
clickclick = "^20.10.2"
cloudpickle = "^2.2.1"
colorama = "^0.4.6"
comm = "^0.1.4"
configupdater = "^3.1.1"
connexion = "^2.14.2"
constantly = "^15.1.0"
cron-descriptor = "^1.4.0"
croniter = "^1.4.1"
cryptography = "^41.0.4"
cssselect = "^1.2.0"
cycler = "^0.11.0"
cython = "^3.0.2"
dash = "^2.13.0"
dash-bootstrap-components = "^1.5.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-table = "^5.0.0"
dask = "^2023.9.2"
datetime-quarter = "^1.0.3"
debugpy = "^1.8.0"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
deprecated = "^1.2.14"
dill = "^0.3.7"
distro = "^1.8.0"
dnspython = "^2.4.2"
docker = "^6.1.3"
docutils = "^0.20.1"
easyprocess = "^1.1"
entrypoint2 = "^1.1"
et-xmlfile = "^1.1.0"
exceptiongroup = "^1.1.3"
executing = "^1.2.0"
fake-useragent = "^1.2.1"
fanstatic = "^1.4"
fastjsonschema = "^2.18.0"
filelock = "^3.12.4"
flask-appbuilder = "^4.3.6"
flask-jwt-extended = "^4.5.2"
flask-limiter = "^3.5.0"
flask-login = "^0.6.2"
flask-session = "^0.5.0"
flask-wtf = "^1.1.1"
flatbuffers = "^23.5.26"
folium = "^0.14.0"
fonttools = "^4.42.1"
fqdn = "^1.5.1"
frozenlist = "^1.4.0"
fsspec = "^2023.9.1"
gast = "^0.5.4"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-pasta = "^0.2.0"
gprof2dot = "^2022.7.29"
graphviz = "^0.20.1"
greenlet = "^2.0.2"
grpcio = "^1.58.0"
gunicorn = "^21.2.0"
h11 = "^0.14.0"
h5py = "^3.9.0"
httpcore = "^0.18.0"
httpx = "^0.25.0"
hyperlink = "^21.0.0"
ibm-db = "^3.2.0"
ibm-db-sa = "^0.4.0"
idna = "^3.4"
imageio = "^2.31.3"
importlib-metadata = "^6.8.0"
importlib-resources = "^6.0.1"
incremental = "^22.10.0"
inflection = "^0.5.1"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
ipython-genutils = "^0.2.0"
ipywidgets = "^8.1.1"
isoduration = "^20.11.0"
itemadapter = "^0.8.0"
itemloaders = "^1.1.0"
itsdangerous = "^2.1.2"
jax = "^0.4.16"
jedi = "^0.19.0"
jinja2 = "^3.1.2"
jmespath = "^1.0.1"
joblib = "^1.3.2"
js = "^1.0"
jsonpickle = "^3.0.2"
jsonpointer = "^2.4"
jsonschema = "^4.19.0"
jupyter = "^1.0.0"
jupyter-console = "^6.6.3"
jupyter-events = "^0.7.0"
jupyter-client = "^8.3.1"
jupyter-core = "^5.3.1"
jupyter-server = "^2.7.3"
jupyter-server-terminals = "^0.4.4"
jupyterlab-pygments = "^0.2.2"
jupyterlab-widgets = "^3.0.9"
keras = "^2.14.0"
kiwisolver = "^1.4.5"
lazy-object-proxy = "^1.9.0"
libclang = "^16.0.6"
limits = "^3.6.0"
linkify-it-py = "^2.0.2"
locket = "^1.0.0"
lockfile = "^0.12.2"
lxml = "^4.9.3"
mako = "^1.2.4"
markdown = "^3.4.4"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.3"
marshmallow = "^3.20.1"
marshmallow-enum = "^1.5.1"
marshmallow-oneofschema = "^3.0.1"
matplotlib = "^3.8.0"
matplotlib-inline = "^0.1.6"
mdit-py-plugins = "^0.4.0"
mdurl = "^0.1.2"
mistune = "^3.0.1"
mouseinfo = "^0.1.3"
msgpack = "^1.0.5"
mss = "^9.0.1"
multidict = "^6.0.4"
mysql = "^0.0.3"
mysqlclient = "^2.2.0"
nbclassic = "^1.0.0"
nbclient = "^0.8.0"
nbconvert = "^7.8.0"
nbformat = "^5.9.2"
nest-asyncio = "^1.5.8"
networkx = "^3.1"
nltk = "^3.8.1"
notebook = "^7.0.3"
notebook-shim = "^0.2.3"
numexpr = "^2.8.6"
oauthlib = "^3.2.2"
openpyxl = "^3.1.2"
opt-einsum = "^3.3.0"
ordered-set = "^4.1.0"
outcome = "^1.2.0"
overrides = "^7.4.0"
packaging = "^23.1"
pandas = "^2.1.0"
pandocfilters = "^1.5.0"
paramiko = "^3.3.1"
parse = "^1.19.1"
parsel = "^1.8.1"
parso = "^0.8.3"
partd = "^1.4.0"
pathspec = "^0.11.2"
pendulum = "^2.1.2"
pickleshare = "^0.7.5"
platformdirs = "^3.10.0"
playwright = "^1.38.0"
plotly = "^5.17.0"
pluggy = "^1.3.0"
polars = "^0.19.3"
prettytable = "^3.9.0"
prison = "^0.2.1"
prometheus-client = "^0.17.1"
prompt-toolkit = "^3.0.39"
protego = "^0.3.0"
protobuf = "^4.24.3"
psutil = "^5.9.5"
psycopg2 = "^2.9.7"
pure-eval = "^0.2.2"
py-cpuinfo = "^9.0.0"
pyarrow = "^13.0.0"
pyasn1 = "^0.5.0"
pyasn1-modules = "^0.3.0"
pyautogui = "^0.9.54"
pycodestyle = "^2.11.0"
pycparser = "^2.21"
pydantic = "^2.3.0"
pydispatcher = "^2.0.7"
pydot = "^1.4.2"
pydot-ng = "^2.0.0"
pygetwindow = "^0.0.9"
pygments = "^2.16.1"
pyjwt = "^2.8.0"
pymsgbox = "^1.0.9"
pymysql = "^1.1.0"
pynacl = "^1.5.0"
pyopenssl = "^23.2.0"
pyparsing = "^3.1.1"
pypdf2 = "^3.0.1"
pyperclip = "^1.8.2"
pyquery = "^2.0.0"
pyrect = "^0.2.0"
pyrsistent = "^0.19.3"
pyscreenshot = "^3.1"
pyscreeze = "^0.1.29"
pysocks = "^1.7.1"
pytesseract = "^0.3.10"
python-daemon = "^3.0.1"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
python-json-logger = "^2.0.7"
python-nvd3 = "^0.15.0"
python-pptx = "^0.6.22"
python-slugify = "^8.0.1"
pytweening = "^1.0.7"
pytz = "^2023.3.post1"
pytzdata = "^2020.1"
pyvis = "^0.3.2"
pywin32 = "^306"
pywinpty = "^2.0.11"
pyyaml = "^6.0.1"
pyzmq = "^25.1.1"
qtconsole = "^5.4.4"
qtpy = "^2.4.0"
queuelib = "^1.6.2"
regex = "^2023.8.8"
requests = "^2.31.0"
requests-file = "^1.5.1"
requests-html = "^0.10.0"
requests-oauthlib = "^1.3.1"
requests-toolbelt = "^1.0.0"
rfc3339-validator = "^0.1.4"
rfc3986 = "^2.0.0"
rfc3986-validator = "^0.1.1"
rich = "^13.5.3"
rich-argparse = "^1.3.0"
rsa = "^4.9"
scikit-learn = "^1.3.0"
scrapy = "^2.11.0"
scrapy-playwright = "^0.0.32"
seaborn = "^0.12.2"
selenium = "^4.12.0"
send2trash = "^1.8.2"
service-identity = "^23.1.0"
setproctitle = "^1.3.2"
setuptools-scm = "^7.1.0"
six = "^1.16.0"
sniffio = "^1.3.0"
sortedcontainers = "^2.4.0"
soupsieve = "^2.5"
sqlalchemy-jsonfield = "^1.0.1.post0"
sqlalchemy-utils = "^0.41.1"
sqlparse = "^0.4.4"
sshtunnel = "^0.4.0"
stack-data = "^0.6.2"
swifter = "^1.4.0"
tabula = "^1.0.5"
tabula-py = "^2.8.1"
tabulate = "^0.9.0"
tenacity = "^8.2.3"
termcolor = "^2.3.0"
terminado = "^0.17.1"
text-unidecode = "^1.3"
threadpoolctl = "^3.2.0"
tinycss2 = "^1.2.1"
tldextract = "^3.6.0"
toolz = "^0.12.0"
tornado = "^6.3.3"
tqdm = "^4.66.1"
traitlets = "^5.10.0"
treelib = "^1.7.0"
trio = "^0.22.2"
trio-websocket = "^0.10.4"
twisted-iocpsupport = "^1.0.4"
typing-extensions = "^4.8.0"
tzdata = "^2023.3"
uc-micro-py = "^1.0.2"
unicodecsv = "^0.14.1"
uri-template = "^1.3.0"
utils = "^1.0.1"
w3lib = "^2.1.2"
wcwidth = "^0.2.6"
webcolors = "^1.13"
webdriver-manager = "^4.0.0"
webencodings = "^0.5.1"
webob = "^1.8.7"
websocket-client = "^1.6.3"
websockets = "^11.0.3"
wget = "^3.2"
widgetsnbextension = "^4.0.9"
wrapt = "^1.15.0"
wsproto = "^1.2.0"
wtforms = "^3.0.1"
xgboost = "^2.0.0"
xlsxwriter = "^3.1.4"
xlwings = "^0.30.12"
yarl = "^1.9.2"
zipp = "^3.17.0"
zope-interface = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
