[tool.poetry]
name = "etl-pipelines"
version = "0.1.0"
description = "ALL ETL PIPELINES TO TRANSFORM THE BI DATA PER BUSINESS REQS."
authors = ["AJARABANI"]
license = "NA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
xlwings = "^0.30.12"
bigtree = "^0.12.3"
pandas = "^2.1.0"
pyspark = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
